StockGame/wwwroot/css/2021.css
/* ... */
.btn.alt {
  background: transparent;
  border: 2px solid #81C14B;
  color: #81C14B;
}
.btn.alt:hover {
  color: #FFF;
}
.btn.small {
  padding: 0.625rem 1rem;
}
.btn.big {
  font-size: 1.375rem;
}
.btn i {
  margin-right: 0.75rem;
  font-size: 1.125rem;
}
.btn.red {
  background-color: #e10a00;
  border-color: #e10a00;
}
.btn.red:hover {
  background-color: #8C0700;
  border-color: #8C0700;
}

.form-group.flex {
  display: flex;
  align-items: center;
  margin-top: 1.5rem;
}
.form-group.flex input, .form-group.flex button {
  margin-right: 1rem;
}
.form-group.flex input:last-child, .form-group.flex button:last-child {
  margin-right: 0;
}
.form-group.form-submit {
  display: flex;
  justify-content: flex-end;
}

select.form-control {
  color: #172A3A;
  height: 3rem;
  padding: 0 0.75rem;
  font-size: 1.125rem;
  width: 100%;
  border: 1px solid #172A3A;
  transition: border-color 0.5s;
}
select.form-control:focus {
  border-color: #81C14B;
  box-shadow: none;
}

input:not([type=checkbox]):not([type=radio]):not([type=submit]):not([type=button]) {
  color: #172A3A;
  height: 3rem;
  padding: 0 1.125rem;
  font-size: 1.125rem;
  width: 100%;
  border: 1px solid #172A3A;
  transition: border-color 0.5s;
}
input:not([type=checkbox]):not([type=radio]):not([type=submit]):not([type=button]):focus {
  border-color: #81C14B;
  box-shadow: none;
}

input:-webkit-autofill::first-line {
  font-family: "Roboto", sans-serif;
  font-size: 1.125rem;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px white inset !important;
}

input[type=submit],
button[type=submit],
input[type=button] {
  border-radius: 9999px;
  background: #81C14B;
  color: #fff;
  border: none;
  padding: 0 1.625rem;
  font-weight: 700;
  outline: 0;
  border: 0;
  height: 3rem;
  box-sizing: border-box;
  border: 2px solid #81C14B;
}
input[type=submit]:active, input[type=submit]:focus,
button[type=submit]:active,
button[type=submit]:focus,
input[type=button]:active,
input[type=button]:focus {
  border: 2px solid #FFF;
  outline: 1px solid #172A3A;
  background-color: #81C14B;
  box-shadow: none;
  color: #fff;
}
input[type=submit]:active:focus, input[type=submit]:active:hover, input[type=submit]:focus:focus, input[type=submit]:focus:hover,
button[type=submit]:active:focus,
button[type=submit]:active:hover,
button[type=submit]:focus:focus,
button[type=submit]:focus:hover,
input[type=button]:active:focus,
input[type=button]:active:hover,
input[type=button]:focus:focus,
input[type=button]:focus:hover {
  background-color: #81C14B;
  outline: 1px solid #172A3A;
  border: 2px solid #FFF;
  color: #fff;
}
input[type=submit]:hover,
button[type=submit]:hover,
input[type=button]:hover {
  background-color: #468412;
  border: 2px solid #468412;
}

::-webkit-input-placeholder,
::-moz-placeholder,
:-ms-input-placeholder,
:-moz-placeholder {
  /* Chrome/Opera/Safari */
  color: #172A3A;
}

form label {
  font-family: "Ubuntu", sans-serif;
  font-size: 1.125rem;
}

.customCheckbox {
  display: flex;
}
.customCheckbox input {
  position: absolute;
  left: -9999px;
}
.customCheckbox input + span {
  display: block;
  width: 1.25rem;
  height: 1.25rem;
  box-sizing: border-box;
  border: 1px solid #1040a1;
  border-radius: 4px;
  margin-right: 1rem;
}
.customCheckbox input:focus + span {
  border-color: #74B3CE;
}
.customCheckbox input:checked + span {
  display: flex;
  justify-content: center;
  align-items: center;
}
.customCheckbox input:checked + span:before {
  content: "";
  font-family: "Font Awesome 5 Pro";
  display: inline-block;
  font-size: 0.875rem;
  font-weight: 700;
  display: block;
}

.hint {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.checkbox {
  margin-top: 1.125rem;
}

.trendUp, .win {
  color: #00c609;
}

.trendDown, .loss {
  color: #e10a00;
}

.trendSame {
  color: #172A3A;
}

html {
  -webkit-font-smoothing: antialiased;
  -moz-font-smoothing: antialiased;
  font-smoothing: antialiased;
  scroll-behavior: smooth;
  height: 100%;
  width: 100%;
  font-family: "Roboto", sans-serif;
  color: #172A3A;
  font-size: 16px;
  background-color: #fff;
}

body {
  position: relative;
  background-color: #fff;
  height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-content: flex-start;
  align-items: flex-start;
}

.oldContent {
  padding: 0 3.75rem;
}

.wrapAll {
  flex: 1 0 auto;
  width: 100%;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
  color: #172A3A;
  height: 100%;
  overflow: hidden;
}
.wrapAll.notFixed {
  height: auto;
  overflow: visible;
}
.wrapAll.loginBody {
  overflow: hidden;
  position: relative;
  padding: 0 2.25rem;
  height: 100%;
}
.wrapAll.loginBody .oldContent {
  height: 100%;
}
.wrapAll.loginBody + footer {
  position: absolute;
  bottom: 0;
}
.wrapAll.loginBody:before {
  content: "";
  width: 800px;
  height: 800px;
  background: #81C14B;
  display: block;
  position: absolute;
  top: -460px;
  left: -460px;
  transform: rotate(25deg);
  outline: 6px solid #172A3A;
  outline-offset: 1rem;
}
.wrapAll.loginBody:after {
  content: "";
  width: 800px;
  height: 800px;
  background: #81C14B;
  display: block;
  position: absolute;
  bottom: -460px;
  right: -460px;
  transform: rotate(25deg);
  outline: 6px solid #172A3A;
  outline-offset: 1rem;
}

.wrapper {
  max-width: 1024px;
  padding: 0;
  margin: 0 auto;
  position: relative;
}

.centered {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}
.centered .logo {
  max-width: 600px;
  margin: 0 auto 5rem;
}

.loginChoices {
  max-width: 400px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  font-size: 1.125rem;
  text-align: center;
}
.loginChoices .btn {
  margin-bottom: 2rem;
}

footer {
  text-align: center;
  width: 100%;
}
/* ... */

